--- a/js/js-5.css
+++ b/js/js-5.css
@@ -4,10 +4,13 @@
 }
 
 
+/* header area */
 
 #header {
     width: 600px;
     margin: 0 auto;
+    font-size: 16px;
+    line-height: 18px;
 }
 
 #url-input {
@@ -28,6 +31,7 @@
 }
 
 
+/* thread area*/
 
 #thread {
     width: 960px;
